# gal-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.claude/: settings.local.json
docs/: auto-process-detection-spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  process_monitor.rs  tray_manager.rs
src/components/: BangumiCommentsPanel.tsx  BangumiEntityDetailPanel.tsx  BangumiPanel.tsx  BrowseDetailPanel.tsx  BrowseFilterBar.tsx  BrowseGameCard.tsx  BrowseView.tsx  Dashboard.tsx  GameCard.tsx  GameDetail.tsx  GameDetailPage.tsx  GameList.tsx  GameRow.tsx  MemoryView.tsx  Modal.tsx  PageHeaderContext.tsx  ProcessConfig.tsx  ProcessSelector.tsx  RecordsPanel.tsx  SearchModal.tsx  Settings.tsx  Sidebar.tsx  ThemeToggle.tsx  appTopbar.test.ts  appTopbar.ts  browseFilterLayout.test.ts  browseNavigation.test.ts  browseNavigation.ts  browseOverlayLayout.test.ts  gameDetailTabs.test.ts  gameDetailTabs.ts  gameRoutes.test.ts  gameRoutes.ts
src/context/: ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts  useProcessMonitor.ts
src/services/: bangumiApi.ts  bangumiComments.test.ts  bangumiComments.ts  bangumiDisplay.test.ts  bangumiDisplay.ts  bangumiEntity.test.ts  bangumiEntity.ts  bangumiGame.test.ts  bangumiGame.ts  bangumiLibrary.ts  bangumiMeta.test.ts  bangumiMeta.ts  bangumiSync.test.ts  bangumiSync.ts  (+11 more)
(+21 files in other folders)
